# battery-pack

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  WIP.md  _typos.toml  battery-pack.toml  book.toml  deny.toml  lychee.toml  release-plz.toml
.cargo/: config.toml
battery-packs/ci-battery-pack/: CHANGELOG.md  Cargo.toml  README.md
battery-packs/ci-battery-pack/skills/binary-releases/: SKILL.md
battery-packs/ci-battery-pack/skills/github-ci-fundamentals/: SKILL.md
battery-packs/ci-battery-pack/skills/trusted-publishing/: SKILL.md
battery-packs/ci-battery-pack/snippets/github/: ci-pass.yml
battery-packs/ci-battery-pack/snippets/github/jobs/: bench.yml  build.yml  clippy-sarif.yml  clippy.yml  docsrs.yml  features.yml  fmt.yml  fuzz-smoke.yml  msrv.yml  mutants.yml  semver.yml  spellcheck.yml  stress-test.yml  warnings.yml  xtask.yml
battery-packs/ci-battery-pack/src/: lib.rs
battery-packs/ci-battery-pack/src/snapshots/: maximalist.txt  minimalist.txt  standalone_benchmarks.txt  standalone_binary_release.txt  standalone_clippy_sarif.txt  standalone_dependency_policy.txt  standalone_fuzzing.txt  standalone_license_scanning.txt  standalone_mdbook.txt  standalone_mutation_testing.txt  standalone_security_scanning.txt  standalone_spellcheck.txt  standalone_stress_test.txt  standalone_trusted_publishing.txt  standalone_xtask.txt
battery-packs/ci-battery-pack/templates/benchmarks/benches/: example_bench.rs
battery-packs/ci-battery-pack/templates/binary-release/: _Cargo.toml  cargo-bin-section.toml
battery-packs/ci-battery-pack/templates/dependency-policy/: bp-template.toml  deny.toml
battery-packs/ci-battery-pack/templates/full/: Cargo.toml  README.md  _Cargo.toml  _typos.toml  battery-pack.toml  bp-template.toml  deny.toml
battery-packs/ci-battery-pack/templates/license-scanning/: deny.toml
battery-packs/ci-battery-pack/templates/security-scanning/: bp-template.toml
battery-packs/ci-battery-pack/templates/spellcheck/: _typos.toml
battery-packs/ci-battery-pack/templates/trusted-publishing/: bp-template.toml
battery-packs/embedded-battery-pack/: CHANGELOG.md  Cargo.toml  README.md
battery-packs/embedded-battery-pack/src/: lib.rs
battery-packs/embedded-battery-pack/templates/blinky/: _Cargo.toml
battery-packs/network-service-battery-pack/: Cargo.toml  TODO.md
battery-packs/network-service-battery-pack/skills/memory-allocator/: SKILL.md
battery-packs/network-service-battery-pack/skills/service-architecture/: SKILL.md
battery-packs/network-service-battery-pack/skills/telemetry/: SKILL.md
battery-packs/network-service-battery-pack/skills/tokio-performance/: SKILL.md
battery-packs/network-service-battery-pack/snippets/: allocator.rs  shutdown.rs  telemetry.rs
battery-packs/network-service-battery-pack/src/: lib.rs
battery-packs/network-service-battery-pack/src/snapshots/: default.txt  http_circuit_breaker.txt  minimal.txt
battery-packs/network-service-battery-pack/templates/service/: README.md  _Cargo.toml  bp-template.toml
opinionated-battery-packs/backend-service-battery-pack/: CHANGELOG.md  Cargo.toml  README.md  TODO.md
opinionated-battery-packs/backend-service-battery-pack/skills/memory-allocator/: SKILL.md
opinionated-battery-packs/backend-service-battery-pack/skills/service-architecture/: SKILL.md
opinionated-battery-packs/backend-service-battery-pack/src/: lib.rs
opinionated-battery-packs/backend-service-battery-pack/src/snapshots/: minimal.txt
opinionated-battery-packs/backend-service-battery-pack/templates/service/: README.md  battery-pack.toml  bp-template.toml
src/battery-pack/: CHANGELOG.md  Cargo.toml  README.md
src/battery-pack/bphelper-build/: CHANGELOG.md  Cargo.toml
src/battery-pack/bphelper-build/src/: lib.rs  tests.rs
src/battery-pack/bphelper-cli/: CHANGELOG.md  Cargo.toml  test_compl.rs
src/battery-pack/bphelper-cli/src/: commands.rs  completions.rs  lib.rs  manifest.rs  registry.rs  template_engine.rs  tui.rs  validate.rs
src/battery-pack/bphelper-cli/tests/: bp_managed.rs  show.rs
src/battery-pack/bphelper-manifest/: CHANGELOG.md  Cargo.toml
src/battery-pack/bphelper-manifest/src/: feature_ref.rs  lib.rs  test_support.rs
src/battery-pack/bphelper-manifest/tests/: feature_oracle.rs
src/battery-pack/src/: build.rs  lib.rs  main.rs
src/battery-pack/templates/default/: Cargo.toml  Cargo.toml.liquid  README.md  _Cargo.toml  cargo-generate.toml
src/battery-pack/templates/with_template/: Cargo.toml  _Cargo.toml  bp-template.toml
src/battery-pack/tests/: with_template.rs
src/cli-bp/: Cargo.toml  build.rs
src/cli-bp/src/: lib.rs  main.rs
src/cli-bp/templates/simple/: Cargo.toml
src/cli-bp/templates/subcmds/: Cargo.toml
src/error-battery-pack/: CHANGELOG.md  Cargo.toml
src/error-battery-pack/src/: lib.rs
src/logging-bp/: Cargo.toml
src/mdbook-battery-pack/: Cargo.toml
src/mdbook-battery-pack/src/: main.rs
src/sectioned-picker/: Cargo.toml  LICENSE-MIT  README.md
src/sectioned-picker/src/: lib.rs  render.rs  state.rs
src/sectioned-picker/src/tests/: mod.rs  render.rs  state.rs
tests/fixtures/: Cargo.toml
tests/fixtures/_stubs/fake-anyhow/: Cargo.toml
tests/fixtures/_stubs/fake-cc/: Cargo.toml
tests/fixtures/_stubs/fake-insta/: Cargo.toml
tests/fixtures/_stubs/fake-serde/: Cargo.toml
tests/fixtures/basic-battery-pack/: Cargo.toml
tests/fixtures/broken-battery-pack/: Cargo.toml
tests/fixtures/category-battery-pack/: Cargo.toml
tests/fixtures/category-battery-pack/src/: lib.rs
tests/fixtures/fancy-battery-pack/: Cargo.toml
tests/fixtures/feature-syntax-battery-pack/: Cargo.toml
tests/fixtures/feature-syntax-battery-pack/src/: lib.rs
tests/fixtures/implicit-feature-battery-pack/: Cargo.toml
tests/fixtures/implicit-feature-battery-pack/src/: lib.rs
tests/fixtures/managed-battery-pack/: Cargo.toml
tests/fixtures/mixed-kinds-battery-pack/: Cargo.toml
tests/fixtures/mixed-kinds-battery-pack/src/: lib.rs
tests/fixtures/optional-feature-battery-pack/: Cargo.toml
tests/fixtures/optional-feature-battery-pack/src/: lib.rs
(+209 files in other folders)
