[workspace]
members = [
	# --- main facade
    "src/battery-pack",
	# --- CLI binary
    "src/cargo-bp",
	# --- scripting commons + JSON schema
    "src/cargo-bp-script",
	# --- mdbook preprocessor
    "src/mdbook-battery-pack",
	# --- helper crates
    "src/battery-pack/bphelper-build",
    "src/battery-pack/bphelper-cli",
    "src/battery-pack/bphelper-manifest",
    "src/sectioned-picker",
	# --- battery packs
    "battery-packs/backend-service-battery-pack",
    "battery-packs/cli-battery-pack",
    "battery-packs/ci-battery-pack",
    "battery-packs/embedded-battery-pack",
    "battery-packs/error-battery-pack",
    "battery-packs/logging-battery-pack",
]
resolver = "2"

[workspace.dependencies]
battery-pack = { path = "src/battery-pack", version = "0.6" }
cargo-bp-script = { path = "src/cargo-bp-script", version = "0.2" }
anyhow = "1"
minijinja = { version = "2", features = ["loader"] }
cargo_metadata = "0.23"
handlebars = "6"
tempfile = "3"
serde_json = "1"
thiserror = "2"
toml = "0.8"
snapbox = { version = "1.2.1", features = ["debug"] }
walkdir = "2"

[workspace.dependencies.clap]
version = "4"
features = ["derive", "env"]

[workspace.dependencies.reqwest]
version = "0.13"
features = [
    "blocking",
    "json",
]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.clap_complete]
version = "4"
features = ["unstable-dynamic"]
