[package]
name = "network-service-battery-pack"
version = "0.1.0"
edition = "2024"
description = "Battery pack for resilient async network services in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/battery-pack-rs/battery-pack"
keywords = ["battery-pack", "axum", "tokio", "observability", "network"]

[package.metadata.battery-pack]
hidden = ["battery-pack", "snapbox"]

[dependencies]
battery-pack = { workspace = true }

# Core observability; always on.
metrique = { version = "0.1", features = ["json"] }
metrique-util = { version = "0.1", features = ["tokio-metrics-bridge"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
# dial9 (Tokio flight recorder) needs the `tokio_unstable` rustflag to compile,
# which generated projects supply via .cargo/config.toml. Optional here so the
# pack's own build (without that flag) stays green; bp-managed still resolves the
# version from this spec.
dial9-tokio-telemetry = { version = "0.3", features = ["tracing-layer"], optional = true }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7"] }

# Servers (the template picks one).
axum = { version = "0.8", optional = true }
hyper = { version = "1", features = ["http1", "http2", "server"], optional = true }
hyper-util = { version = "0.1", features = ["tokio", "server", "service"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["timeout", "catch-panic"], optional = true }

# Downstream clients (the template picks one).
redis = { version = "1", features = ["tokio-comp", "connection-manager"], optional = true }
reqwest = { version = "0.13", features = ["json"], optional = true }

failsafe = { version = "1", optional = true }
# default features pull axum + tonic; disabled so rate-limit stays framework-agnostic
# and the template enables only the chosen framework's feature.
tower_governor = { version = "0.8", default-features = false, optional = true }

clap = { version = "4", features = ["derive", "env"], optional = true }

# Benchmark suite (default-on in generated templates; async benches use the tokio executor).
criterion = { version = "0.8", features = ["async_tokio"], optional = true }

# Allocators are target-gated: jemalloc/mimalloc don't build under MSVC.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.7", optional = true }
mimalloc = { version = "0.1", optional = true }

[build-dependencies]
battery-pack = { workspace = true, features = ["build"] }

[dev-dependencies]
battery-pack = { workspace = true, features = ["cli"] }
snapbox = "1"
# util = tower::util::ServiceExt::oneshot, for driving services in tests without binding a socket
tower = { version = "0.5", features = ["util"] }

[features]
default = ["axum-server", "jemalloc", "clap-config"]
axum-server = ["dep:axum", "dep:tower", "dep:tower-http"]
hyper-server = ["dep:hyper", "dep:hyper-util", "dep:tower", "dep:tower-http"]
redis-client = ["dep:redis"]
http-client = ["dep:reqwest"]
circuit-breaker = ["dep:failsafe"]
rate-limit = ["dep:tower_governor", "dep:tower"]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc-alloc = ["dep:mimalloc"]
clap-config = ["dep:clap"]
benchmarks = ["dep:criterion"]
# Enabling dial9 requires the `tokio_unstable` rustflag (see generated .cargo/config.toml).
dial9 = ["dep:dial9-tokio-telemetry"]
