[package]
name = "bphelper-manifest"
version = "0.5.6"
edition = "2024"
description = "Shared battery pack manifest parsing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/battery-pack-rs/battery-pack"
keywords = ["battery-pack"]

[dependencies]
thiserror.workspace = true
toml.workspace = true
serde.workspace = true
walkdir.workspace = true
cargo_metadata.workspace = true
serde_json.workspace = true

[features]
# Enables the oracle test harness that shells out to `cargo metadata`
# and asserts our resolver agrees with cargo's. Off by default because
# it requires network on first run and is slow.
oracle = []

[dev-dependencies]
tempfile.workspace = true
indoc = "2"
snapbox.workspace = true
